CHATS_SIT/force-app/main/default/objects/T_SLOT_CONTRACT_ADDENDUM__c.object
<CustomObject>
    <fields>
        <fullName>CDE_COUNTY__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Fiscal Agreement County</label>
        <referenceTo>T_COUNTY__c</referenceTo>
        <relationshipLabel>Slot Contract Addendums</relationshipLabel>
        <relationshipName>Slot_Contract_Addendums</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CDE_STATUS__c</fullName>
        <label>Addendum Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>R00703</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CNT_FUTURE_VACANT_SLOTS__c</fullName>
        <label>Number of Future Dated Vacant Slots</label>
        <summaryFilterItems>
            <field>T_SLOT_CONTRACT__c.IND_FUTURE_VACANT__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>T_SLOT_CONTRACT__c.IDN_ADDENDUM__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>CNT_OCCUPIED_SLOTS__c</fullName>
        <label>Number of Occupied Slots</label>
        <summaryFilterItems>
            <field>T_SLOT_CONTRACT__c.IND_OCCUPIED__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>T_SLOT_CONTRACT__c.IDN_ADDENDUM__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>CNT_SLOT_CONTRACTS__c</fullName>
        <label>Number of Slot Contracts</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CNT_VACANT_SLOTS__c</fullName>
        <label>Number of Vacant Slots as of today</label>
        <summaryFilterItems>
            <field>T_SLOT_CONTRACT__c.IND_OCCUPIED__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>T_SLOT_CONTRACT__c.IND_AVAILABLE__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>T_SLOT_CONTRACT__c.IND_FUTURE_VACANT__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>T_SLOT_CONTRACT__c.IDN_ADDENDUM__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>DTE_BEGIN_ADDENDUM__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Addendum Begin Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DTE_END_ADDENDUM__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Addendum End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IDN_FISCAL_AGREEMENT__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Fiscal Agreement ID</label>
        <referenceTo>T_PROVR_FISCAL_AGREMENT__c</referenceTo>
        <relationshipLabel>Slot Contract Addendums</relationshipLabel>
        <relationshipName>Slot_Contract_Addendums</relationshipName>
        <type>Lookup</type>
    </fields>
   <fields>
        <fullName>CDE_REASON_END_ADDENDUM__c</fullName>
        <label>Reason for Closure</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>County Policy Violation</fullName>
                </value>
                <value>
                    <fullName>Deceased</fullName>
                </value>
                <value>
                    <fullName>No longer a slot contract</fullName>
                </value>
                <value>
                    <fullName>No Longer Demonstrated Need For a Slot Contract</fullName>
                </value>
                <value>
                    <fullName>Non-Use</fullName>
                </value>
                <value>
                    <fullName>Provider Request</fullName>
                </value>
                <value>
                    <fullName>License Expired/Closed</fullName>
                </value>
                <value>
                    <fullName>License Number Changed</fullName>
                </value>
                <value>
                    <fullName>Failed to maintain a minimum of a QRIS Level 2 rating</fullName>
                </value>
                <value>
                    <fullName>New Fiscal Agreement has been put in place</fullName>
                </value>
                <value>
                    <fullName>Slot Contract Term has expired (or Number of Allowable Months has expired)</fullName>
                </value>
                <value>
                    <fullName>Attendance expectations were unmet</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Slot Contract Addendum</label>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Slot Contract Addendums</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>